Actualización de diapositivas.

--- a/Puntaje negativo - Charla.html
+++ b/Puntaje negativo - Charla.html
@@ -367,6 +367,7 @@ Alberto Torreblanca
 <ul>
 <li>Al restar puntos su medida en la escala de logits cambia</li>
 <li>Medida asociada al número de respuestas correctas.</li>
+<li>Evaluación diagnóstica errónea</li>
 </ul></li>
 <li>Debido a la naturaleza de algunos ítems, problemas de precisión en la medición
 <ul>
@@ -381,7 +382,98 @@ Alberto Torreblanca
 <section id="ejemplos-de-distribuciones-de-puntajes-1" class="slide level2">
 <h2>Ejemplos de distribuciones de puntajes</h2>
 
-<img data-src="Puntaje-negativo---Charla_files/figure-revealjs/unnamed-chunk-2-1.png" width="960" class="r-stretch"><div class="footer footer-default">
+<img data-src="Puntaje-negativo---Charla_files/figure-revealjs/unnamed-chunk-2-1.png" width="960" class="r-stretch"></section>
+<section id="algunas-caracterśitcas-de-la-admisión" class="slide level2">
+<h2>Algunas caracterśitcas de la admisión</h2>
+<ul>
+<li>Se desea mayor precisión en los admitidos, especialmente en los que pelean vacantes</li>
+<li>La selección de los ítems y elaboración tienen estas consideraciones</li>
+</ul>
+</section>
+<section id="el-problema-de-la-adivinación" class="slide level2">
+<h2>El problema de la adivinación</h2>
+<ul>
+<li>El adivinar puede dar la admisión</li>
+<li>Los examinados que hábiles, adivinación informada.</li>
+<li>Los examinados que no hábiles, azar.</li>
+</ul>
+</section>
+<section id="se-perjudican-los-mejores" class="slide level2">
+<h2>Se perjudican los mejores</h2>
+
+<img data-src="figura1.png" width="640" class="r-stretch quarto-figure-center"><p class="caption">Puntajes a Escala</p></section>
+<section id="probabilidad-de-acertar-por-azar" class="slide level2 smaller">
+<h2>Probabilidad de acertar por azar</h2>
+<table>
+<colgroup>
+<col style="width: 33%">
+<col style="width: 33%">
+<col style="width: 33%">
+</colgroup>
+<thead>
+<tr class="header">
+<th>Número de preguntas acertadas por azar</th>
+<th>Número de patrones de respuesta posibles</th>
+<th>Probabilidad</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>1</td>
+<td>4</td>
+<td>25%</td>
+</tr>
+<tr class="even">
+<td>2</td>
+<td>16</td>
+<td>6,25%</td>
+</tr>
+<tr class="odd">
+<td>3</td>
+<td>64</td>
+<td>1,56%</td>
+</tr>
+<tr class="even">
+<td>4</td>
+<td>256</td>
+<td>0,391%</td>
+</tr>
+<tr class="odd">
+<td>5</td>
+<td>1024</td>
+<td>0,097%</td>
+</tr>
+<tr class="even">
+<td>6</td>
+<td>4096</td>
+<td>0,024%</td>
+</tr>
+<tr class="odd">
+<td>7</td>
+<td>16384</td>
+<td>0,006%</td>
+</tr>
+<tr class="even">
+<td>8</td>
+<td>65536</td>
+<td>0,002%</td>
+</tr>
+<tr class="odd">
+<td>9</td>
+<td>262144</td>
+<td>0,000%</td>
+</tr>
+<tr class="even">
+<td>10</td>
+<td>1048576</td>
+<td>0,000%</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section class="slide level2">
+
+<div class="footer footer-default">
 
 </div>
 </section>
